# crux

./: README.md  Todo  docker-compose.yml  pyproject.toml
src/crux/: main.py
src/crux/core/: identity_scoring_api.py  parse_resume_api.py
src/crux/io/: db_and_models.py
